argocd/monitoring/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
